# diary

./: .gitignore  DESIGN.md  PLAN.md  README.md  REQUIREMENTS.md  pyproject.toml
docs/: phase1-tasks.md  phase2-tasks.md  phase3-tasks.md  phase4-tasks.md  phase5-tasks.md  phase6-tasks.md  phase7-tasks.md
src/diary/: api_cli.py  chat.py  cli.py  config.py  dates.py  db.py  install.py  models.py  notify.py
src/diary/agent/: agent.py  tools.py
src/diary/service/: activity_log.py  notifications.py  summary.py  tags.py  tasks.py
src/diary/tui/: app.py
tests/: conftest.py  test_activity_log_service.py  test_agent.py  test_agent_tools.py  test_api_cli.py  test_cli.py  test_cli_smoke.py  test_config.py  test_dates.py  test_db.py  test_models.py  test_notifications.py  test_summary_service.py  test_tag_service.py  test_task_service.py  test_tui.py
